Fix unwanted scrollbars on generator
Add small bit of CSS to prevent scroll bars from beign shown when customizing a button.

--- a/css/app.css
+++ b/css/app.css
@@ -35,6 +35,10 @@ h3 {
 	font-size: 20px;
 }
 
+.tab-content {
+	padding-bottom: 15px;
+}
+
 .example {
 	position: relative;
 	margin: 0;
